wip sensor graph with updated katstore webserver

--- a/app/sensor-graph/sensor-graph.html
+++ b/app/sensor-graph/sensor-graph.html
@@ -6,7 +6,7 @@
             <md-checkbox class="md-primary alarms-tools-checkbox" md-theme="{{themePrimaryButtons}}" style="margin-right: 32px;"
                          ng-model="vm.showGridLines" aria-label="Show Grid Lines">Show Grid Lines</md-checkbox>
             <input class="search-input-box" style="min-width: 350px;" ng-model="vm.sensorInput" placeholder="Add Sensor"/>
-            <md-button class="md-fab md-button-fab-small md-primary" md-theme="{{themePrimaryButtons}}" ng-click="vm.addSensor(vm.sensorInput)">
+            <md-button aria-label="Add Sensor" class="md-fab md-button-fab-small md-primary" md-theme="{{themePrimaryButtons}}" ng-click="vm.addSensor(vm.sensorInput)">
                 <md-icon style="margin-top: -8px;" md-font-icon="fa-plus" class="fa"></md-icon>
             </md-button>
         </md-toolbar>
