changed sensorGraph state to sensor-graph

--- a/app/widgets/navigation/navigation-widget.html
+++ b/app/widgets/navigation/navigation-widget.html
@@ -10,7 +10,7 @@
         <md-button class="md-raised md-primary" ng-click="vm.stateGo('receptorStatus')" aria-label="Receptor Status">Receptor Status</md-button>
         <md-button class="md-raised md-primary" ng-click="vm.stateGo('operator-control')" aria-label="Operator Control">Operator Control</md-button>
         <md-button class="md-raised md-primary" ng-click="vm.stateGo('scheduler')" aria-label="Scheduler Home">Scheduler</md-button>
-        <md-button class="md-raised md-primary" ng-click="vm.stateGo('sensorGraph')" aria-label="Sensor Graphs">Sensor Graphs</md-button>
+        <md-button class="md-raised md-primary" ng-click="vm.stateGo('sensor-graph')" aria-label="Sensor Graphs">Sensor Graphs</md-button>
         <md-button class="md-raised md-primary" ng-click="vm.stateGo('weather')" aria-label="Weather">Weather</md-button>
     </div>
     <div layout="row" layout-align="center center" class="" md-theme="{{vm.themePrimaryButtons}}">
