--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                     </md-item-content>
                 </md-item>
                 <md-item>
-                    <md-item-content class="menu-item" layout="row" layout-align="start center" ng-click="vm.sideNavStateGo('sensorGraph')">
+                    <md-item-content class="menu-item" layout="row" layout-align="start center" ng-click="vm.sideNavStateGo('sensor-graph')">
                         <span class="fa fa-area-chart"></span>
                         <button>Sensor Graphs</button>
                     </md-item-content>
